# revo-norm

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  revo_norm_testing.ipynb
.github/workflows/: ci.yml  deploy-docs.yml
docs/: changelog.md  configuration.md  index.md  installation.md  languages.md  migration.md  quickstart.md
docs/api/: config.md  entities.md  normalize.md  pronunciation.md  tts.md
docs/features/: acronyms.md  currency.md  dates.md  malay.md  measurements.md  numbers.md  times.md
revo_norm/: __init__.py  abbreviation_utils.py  config.py  currency_utils.py  entity_extractor.py  malay_features.py  malaya_inspired_utils.py  normalizer_en.py  normalizer_ms.py  normalizer_zh.py  normalizer_zh_my.py  num2word.py  num2word_ms.py  num2word_zh.py  pronunciation_mappings.py  shared_features.py  text_normalizer.py  tts_utils.py
scripts/: generate_flow.py
tests/: test_pronunciation_mappings.py
